// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/kanban/calculation/KanbanCalculation base case 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        style="text-decoration: none;"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`components/kanban/calculation/KanbanCalculation calculations menu open 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="variable variable"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        style="text-decoration: none;"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`components/kanban/calculation/KanbanCalculation no menu should appear in readonly mode 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="KanbanCalculation"
    >
      <button
        class="Button size--small"
        style="text-decoration: none;"
        title="3"
        type="button"
      >
        <span>
          3
        </span>
      </button>
    </div>
  </span>
</div>
`;
